--- a/content/demo/plots/parametric_surface.ipynb
+++ b/content/demo/plots/parametric_surface.ipynb
@@ -1,9 +1,58 @@
 {
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "96aae6b0-3903-4dc6-9ff1-253b317a4437",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "source": [
+        "import pythreejs, numpy, matplotlib"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "77439078-aae6-4b4b-b0e0-79f7dde99c94",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "source": [
+        "%run -i parametric_surface.py"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "68976db2-a544-4e1e-a431-194841f6630f",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "source": [
+        "gui = ScatterAnimation(n=10000)\n",
+        "gui.layout"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e7cf9eea-c1e1-4111-98aa-42afa301a31a",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "source": []
+    }
+  ],
   "metadata": {
     "kernelspec": {
-      "name": "python",
       "display_name": "Python (Pyodide)",
-      "language": "python"
+      "language": "python",
+      "name": "python"
     },
     "language_info": {
       "codemirror_mode": {
@@ -18,48 +67,6 @@
       "version": "3.8"
     }
   },
-  "nbformat_minor": 5,
   "nbformat": 4,
-  "cells": [
-    {
-      "id": "96aae6b0-3903-4dc6-9ff1-253b317a4437",
-      "cell_type": "code",
-      "source": "import ipywidgets, ipydatawidgets, traittypes, pythreejs, numpy, matplotlib",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": null
-    },
-    {
-      "id": "77439078-aae6-4b4b-b0e0-79f7dde99c94",
-      "cell_type": "code",
-      "source": "%run -i parametric_surface.py",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": null
-    },
-    {
-      "id": "68976db2-a544-4e1e-a431-194841f6630f",
-      "cell_type": "code",
-      "source": "gui = ScatterAnimation(n=10000)\ngui.layout",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": null
-    },
-    {
-      "id": "e7cf9eea-c1e1-4111-98aa-42afa301a31a",
-      "cell_type": "code",
-      "source": "",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": null
-    }
-  ]
+  "nbformat_minor": 5
 }
